--- a/monitor.html
+++ b/monitor.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 
-                <div class="camera-controls">
+                <div class="camera-controls toolbar">
                     <button id="stopButton" class="control-btn stop-btn" disabled>
                         <i class="fas fa-stop"></i>
                         Stop Monitoring
@@ -137,6 +137,28 @@
                 <div class="stats-section">
                     <h3>Session Statistics</h3>
                     <div class="stats-grid">
+<div class="stat-item">
+    <i class="fas fa-bed"></i>
+    <div class="stat-content">
+        <div class="stat-value" id="avgDrowsyLevel">-</div>
+        <div class="stat-label">Avg Drowsy Level</div>
+    </div>
+</div>
+<div class="stat-item">
+    <i class="fas fa-arrow-up"></i>
+    <div class="stat-content">
+        <div class="stat-value" id="maxDrowsyLevel">-</div>
+        <div class="stat-label">Max Drowsy Level</div>
+    </div>
+</div>
+<div class="stat-item">
+    <i class="fas fa-history"></i>
+    <div class="stat-content">
+        <div class="stat-value" id="lastAlertTime">-</div>
+        <div class="stat-label">Last Alert Time</div>
+    </div>
+</div>
+
                         <div class="stat-item">
                             <i class="fas fa-clock"></i>
                             <div class="stat-content">
