--- a/index.html
+++ b/index.html
@@ -1,190 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DrowsiGuard - Professional Driver Safety System</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DrowsiGuard • Stay Awake. Stay Safe.</title>
+  <meta name="description" content="DrowsiGuard uses your Teachable Machine model to detect drowsiness locally in your browser. No backend required." />
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='256' height='256' viewBox='0 0 256 256'%3E%3Cpath fill='%2300c2ff' d='M128 18c61 0 110 49 110 110s-49 110-110 110S18 189 18 128S67 18 128 18Z'/%3E%3C/svg%3E" />
 </head>
-<body>
-    <div class="bubbles"></div>
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-brand">
-                <i class="fas fa-shield-alt"></i>
-                <span style="color: var(--secondary-color); text-shadow: 0 0 10px var(--secondary-color), 0 0 20px var(--secondary-color);">DrowsiGuard</span>
-            </div>
-            <div class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#how-it-works">How It Works</a>
-                <a href="#benefits">Benefits</a>
-                <a href="#get-started">Get Started</a>
-            </div>
-        </div>
+<body data-page="index">
+  <div class="bubbles" aria-hidden="true"></div>
+
+  <header class="site-header glass">
+    <a class="brand" href="index.html">
+      <svg class="logo-svg" viewBox="0 0 256 64">
+        <defs>
+          <linearGradient id="gradA" x1="0" x2="1">
+            <stop offset="0" stop-color="#63fff6"/>
+            <stop offset="1" stop-color="#4fd4ff"/>
+          </linearGradient>
+        </defs>
+        <text x="0" y="48" font-family="Poppins" font-size="48" font-weight="800" fill="url(#gradA)">DrowsiGuard</text>
+      </svg>
+    </a>
+    <nav class="nav">
+      <a class="nav-link active" href="index.html">Home</a>
+      <a class="nav-link" href="monitor.html">Monitor</a>
+      <button id="themeToggle" class="btn ghost">Theme</button>
     </nav>
+  </header>
 
-    <header class="hero">
-        <div class="hero-container">
-            <div class="hero-content">
-                <h1>Professional Driver Drowsiness Detection System</h1>
-                <p class="hero-description">Advanced AI-powered real-time monitoring system designed to prevent drowsy driving accidents and save lives through intelligent alerting technology.</p>
-                <div class="hero-stats">
-                    <div class="stat">
-                        <div class="stat-number">91%</div>
-                        <div class="stat-label">Accuracy Rate</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-number">0.5s</div>
-                        <div class="stat-label">Response Time</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-number">24/7</div>
-                        <div class="stat-label">Monitoring</div>
-                    </div>
-                </div>
-            </div>
-            <div class="hero-visual">
-                <div class="hero-image">
-                    <i class="fas fa-eye-slash drowsy-icon"></i>
-                    <i class="fas fa-eye awake-icon"></i>
-                </div>
-            </div>
-        </div>
-    </header>
+  <main class="container hero-grid">
+    <section class="hero card">
+      <h1 class="title">Stay Awake. Stay Safe.</h1>
+      <p class="muted">AI-powered drowsiness detection in your browser. Private, real-time, and designed to keep you alert on the road.</p>
+      <div class="cta-row">
+        <a href="monitor.html" class="btn primary">Open Monitor</a>
+        <button id="howItWorks" class="btn secondary">How it Works</button>
+      </div>
+      <ul class="quick-benefits">
+        <li>100% Client-side – no data leaves your device</li>
+        <li>Works over HTTPS (GitHub Pages, Vercel)</li>
+        <li>Fast & lightweight for laptops and mobile</li>
+      </ul>
+    </section>
+    <section class="card learn-more">
+      <h2>How to Get Started</h2>
+      <ol>
+        <li>Train your model on Google Teachable Machine (Image Project).</li>
+        <li>Export as TensorFlow.js and copy your <code>model.json</code> link.</li>
+        <li>Open the Monitor page, paste your link, and click Start.</li>
+        <li>Allow camera access and keep the browser in view.</li>
+      </ol>
+      <p class="muted small">Tip: Works best with good lighting and a stable camera view of your face.</p>
+    </section>
+  </main>
 
-    <main>
-        <section id="features" class="features-section">
-            <div class="container">
-                <h2 class="section-title">Advanced Safety Features</h2>
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-brain"></i>
-                        </div>
-                        <h3>AI-Powered Detection</h3>
-                        <p>Uses advanced machine learning algorithms trained on thousands of facial patterns to detect drowsiness with 91% accuracy in real-time.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-bolt"></i>
-                        </div>
-                        <h3>Instant Alerts</h3>
-                        <p>Triggers immediate audio and visual warnings when drowsiness is detected for 3 consecutive seconds, giving drivers crucial reaction time.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-user-shield"></i>
-                        </div>
-                        <h3>Privacy First</h3>
-                        <p>All processing happens locally in your browser. No video data is transmitted or stored on external servers, ensuring complete privacy.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-mobile-alt"></i>
-                        </div>
-                        <h3>Cross-Platform</h3>
-                        <p>Works on any device with a camera - desktop, laptop, tablet, or smartphone. No installation required, runs directly in your browser.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section class="container grid three">
+    <div class="card feature">
+      <h3>Ocean Bubble Theme</h3>
+      <p>Relaxing visuals and smooth animations keep the interface pleasant while you focus on safety.</p>
+    </div>
+    <div class="card feature">
+      <h3>Professional Alerts</h3>
+      <p>Both sound and voice prompts with the message: <em>"Please awake and pull over immediately."</em></p>
+    </div>
+    <div class="card feature">
+      <h3>Real-time Stats</h3>
+      <p>Live chart, session timer, and max drowsiness tracking help you understand trends.</p>
+    </div>
+  </section>
 
-        <section id="how-it-works" class="how-it-works-section">
-            <div class="container">
-                <h2 class="section-title">How DrowsiGuard Works</h2>
-                <div class="steps-container">
-                    <div class="step">
-                        <div class="step-number">1</div>
-                        <div class="step-content">
-                            <h3>Camera Activation</h3>
-                            <p>System accesses your device's camera with your permission to begin monitoring facial features and eye movements.</p>
-                        </div>
-                    </div>
-                    <div class="step">
-                        <div class="step-number">2</div>
-                        <div class="step-content">
-                            <h3>Real-Time Analysis</h3>
-                            <p>AI model continuously analyzes your facial expressions, eye closure patterns, and head position to detect signs of drowsiness.</p>
-                        </div>
-                    </div>
-                    <div class="step">
-                        <div class="step-number">3</div>
-                        <div class="step-content">
-                            <h3>Smart Detection</h3>
-                            <p>When drowsiness confidence exceeds 70% for 3 consecutive seconds, the system triggers immediate safety protocols.</p>
-                        </div>
-                    </div>
-                    <div class="step">
-                        <div class="step-number">4</div>
-                        <div class="step-content">
-                            <h3>Emergency Alert</h3>
-                            <p>Loud audio warning plays with critical safety message to immediately wake the driver and prevent potential accidents.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <footer class="site-footer glass">
+    <small>© <span id="year"></span> DrowsiGuard — Ocean Bubble Edition.</small>
+  </footer>
 
-        <section id="benefits" class="benefits-section">
-            <div class="container">
-                <h2 class="section-title">Why Choose DrowsiGuard?</h2>
-                <div class="benefits-grid">
-                    <div class="benefit-item">
-                        <i class="fas fa-chart-line"></i>
-                        <h3>Proven Effectiveness</h3>
-                        <p>Drowsy driving causes 91,000 crashes annually. Our system provides crucial early warning to prevent accidents.</p>
-                    </div>
-                    <div class="benefit-item">
-                        <i class="fas fa-clock"></i>
-                        <h3>24/7 Vigilance</h3>
-                        <p>Never sleeps, never gets tired. Continuously monitors your alertness throughout your entire journey.</p>
-                    </div>
-                    <div class="benefit-item">
-                        <i class="fas fa-heart"></i>
-                        <h3>Save Lives</h3>
-                        <p>Protect yourself, your passengers, and other road users from the dangers of drowsy driving.</p>
-                    </div>
-                    <div class="benefit-item">
-                        <i class="fas fa-dollar-sign"></i>
-                        <h3>Cost Effective</h3>
-                        <p>Free to use with no hardware required. Works with any device that has a camera and internet connection.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="get-started" class="cta-section">
-            <div class="container">
-                <div class="cta-content">
-                    <h2>Start Protecting Lives Today</h2>
-                    <p>Join thousands of drivers who trust DrowsiGuard to keep them safe on the road. Begin monitoring in seconds.</p>
-                    <a href="monitor.html" class="cta-button">
-                        <i class="fas fa-play"></i>
-                        Start Detection System
-                    </a>
-                    <div class="cta-note">
-                        <i class="fas fa-info-circle"></i>
-                        <span>Camera access required. Your privacy is protected - no data leaves your device.</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-brand">
-                    <i class="fas fa-shield-alt"></i>
-                    <span style="color: var(--secondary-color); text-shadow: 0 0 10px var(--secondary-color), 0 0 20px var(--secondary-color);">DrowsiGuard</span>
-                </div>
-                <div class="footer-info">
-                    <p>Professional driver safety system powered by advanced AI technology.</p>
-                    <p>&copy; 2025 DrowsiGuard. Built with TensorFlow.js and Teachable Machine.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+  <script src="script.js"></script>
 </body>
 </html>
