--- a/monitor.html
+++ b/monitor.html
@@ -136,7 +136,7 @@
 
                 <div class="stats-section">
                     <h3>Session Statistics</h3>
-                    <div class="stats-grid">
+                    <div class="stats-grid" style="min-height: 250px; display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem;">
                         <div class="stat-item">
                             <i class="fas fa-clock"></i>
                             <div class="stat-content">
