--- a/monitor.html
+++ b/monitor.html
@@ -11,7 +11,11 @@
 </head>
 <body>
     <div class="bubbles"></div>
-    <div class="monitor-container">
+    
+    <div class="monitor-layout">
+        <div class="monitor-left">
+            <!-- Camera + Controls -->
+            <div class="monitor-container">
         <header class="monitor-header">
             <div class="header-content">
                 <a href="index.html" class="back-button">
@@ -25,6 +29,22 @@
                         Quick Start
                     </button>
                 </div>
+        </div>
+        <div class="monitor-right">
+            <!-- Stats -->
+            <div class="stats-grid" style="min-height: 200px;"></div>
+            <!-- Chart -->
+            <div class="chart-container" style="margin-top: 1rem;">
+                <canvas id="drowsyChart" style="width:100%;height:200px;"></canvas>
+            </div>
+            <!-- Alert Log -->
+            <div class="alert-log" id="alertLog">
+                <h3>Alert History</h3>
+                <ul id="alertList"></ul>
+            </div>
+        </div>
+    </div>
+    
                 <div class="status-indicator">
                     <span class="status-dot" id="statusDot"></span>
                     <span id="statusText">System Initializing</span>
@@ -136,7 +156,7 @@
 
                 <div class="stats-section">
                     <h3>Session Statistics</h3>
-                    <div class="stats-grid">
+                    <div class="stats-grid" style="min-height: 250px; display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem;">
                         <div class="stat-item">
                             <i class="fas fa-clock"></i>
                             <div class="stat-content">
