--- a/monitor.html
+++ b/monitor.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 </head>
-<body>
+<body class="monitor-page">
     <div class="bubbles"></div>
     <div class="monitor-container">
         <header class="monitor-header">
