--- a/monitor.html
+++ b/monitor.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 </head>
-<body>
+<body class="monitor-page">
     <div class="bubbles"></div>
     <div class="monitor-container">
         <header class="monitor-header">
@@ -95,7 +95,7 @@
             </div>
 
             <div class="analysis-section">
-                <div class="predictions-section">
+                <div class="analysis-card predictions-section">
                     <div class="section-header">
                         <h2>AI Detection Analysis</h2>
                         <div class="analysis-status" id="analysisStatus">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
 
-                <div class="stats-section">
+                <div class="analysis-card stats-section">
                     <h3>Session Statistics</h3>
                     <div class="stats-grid">
 <div class="stat-item">
@@ -190,7 +190,7 @@
                     </div>
                 </div>
 
-                <div class="settings-section">
+                <div class="analysis-card settings-section">
                     <h3>Alert Settings</h3>
                     <div class="settings-grid">
                         <div class="setting-item">
