--- a/monitor.html
+++ b/monitor.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
 </head>
-<body>
+<body class="monitor-page">
     <div class="bubbles"></div>
     <div class="monitor-container">
         <header class="monitor-header">
@@ -141,8 +141,7 @@
     <i class="fas fa-bed"></i>
     <div class="stat-content">
         <div class="stat-value" id="avgDrowsyLevel">-</div>
-        <div class="stat-label">Avg Drowsy Level</div>
-    </div>
+        <div class="stat-label">Avg Drowsy Level</div></div>
 </div>
 <div class="stat-item">
     <i class="fas fa-arrow-up"></i>
